2022-03-26 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSXibKeyedUnarchiver.h: Add
        customClasses method and _customClasses ivar.
	* Source/GSXib5KeyedUnarchiver.h: Remove _customClasses from
        declarations here and the method as well.
	* Source/GSXib5KeyedUnarchiver.m: Remove customClasses method
        from here.
	* Source/GSXibKeyedUnarchiver.m: Implement logic here to build
        _customClasses array when loading a XIB of version 3 or 4.

2022-03-22 Riccardo Mottola <rm@gnu.org>

	* Source/NSImageCell.m: subclass initImageCell, so that
	RefusesFirstResponder can be set, matching Mac.

2022-02-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSPopUpButtonCell.m(setMenu:): Select the first item of
	the menu instead of the last, as this is the only selection that
	makes sense for pull downs.

	* Source/NSPopUpButtonCell.m: Never change the state of the
	selected item when configured as a pull down to match Apple's
	documentation and implementation.

2022-02-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSPopUpButtonCell.m: Add fix to avoid a dangling
	pointer when changing the menu.

2022-01-11 Gregory John Casamento <greg.casamento@gmail.com>

        * Source/NSBundleAdditions.m: Use FOR_IN macro instead
        of for(... in...) for compiler compatibility.

2021-12-28 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSWindowDecorationView.h:
	Move new addon methods for Wayland to correct class
	GSStandardWindowDecorationView.
	* Source/GSWindowDecorationView.m: Keep variables declarations together.

2021-12-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m: Try to prevent segmenation fault
	when deallocating a popup button.

2021-12-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenu.m: Rename method on NSMenuPanel for the Wayland
	backend to -_menu to keep it apart from the already existing method
	-menu on NSResponder.